<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SinglePlayer">SinglePlayer</string>
    <string name="MultiPlayer">MultiPlayer</string>
    <string name="title_activity_sp">SPActivity</string>
    <string name="title_activity_mp">MPActivity</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="title_activity_level_one">LevelOne</string>
    <string name="player_name">Player Name</string>
    <string name="player_score">Player Score</string>
    <string name="time_left">Time Left</string>
    <string name="number_players">Number Players</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_right">Right</string>
    <string name="btn_left">Left</string>
    <string name="btn_up">Up</string>
    <string name="btn_down">Down</string>
    <string name="bomb">Bomb</string>
    <string name="menu_changeusername">Change Username</string>
    <string name="btn_lvl1">Level 1</string>
    <string name="btn_lvl2">Level 2</string>
    
    
</resources>
