<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".10" 
        android:background="@color/Black" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/player_name"
            android:width="80dp" 
            android:gravity="center_horizontal"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/player_score"
            android:width="80dp" 
            android:gravity="center_horizontal"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time_left"
            android:width="80dp" 
            android:gravity="center_horizontal"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_players"
            android:width="80dp"
            android:gravity="center_horizontal" 
            android:textColor="@color/White"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".68">
    </FrameLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".22">
        

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical" >

             <Button
                 android:id="@+id/hostGame"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_pause" />

             <Button
                 android:id="@+id/button2"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_quit" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center" >

             <Button
                 android:id="@+id/button3"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="56dp"
                 android:layout_height="54dp"
                 android:background="@drawable/left"/>
             
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical" >

             <Button
                 android:id="@+id/button4"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="56dp"
                 android:layout_height="54dp"
                 android:background="@drawable/up"/>

             <Button
                 android:id="@+id/button5"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="56dp"
                 android:layout_height="54dp"
                 android:background="@drawable/down"/>
             
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center" >

             <Button
                 android:id="@+id/button6"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="56dp"
                 android:layout_height="54dp"
                 android:background="@drawable/right"/>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center" >

             <Button
                 android:id="@+id/button7"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/bomb" />

         </LinearLayout>

     </LinearLayout>

</LinearLayout>